# PyMetrics

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  config.yaml  dev-requirements.txt  github_config.yml  pyproject.toml  setup.cfg  setup.py  summarize_config.yaml  tasks.py
.github/workflows/: collect.yaml  daily.yaml  daily_collect.yaml  daily_collection.yaml  daily_summarization.yaml  daily_summarize.yaml  dryrun.yaml  lint.yaml  manual.yaml  unit.yaml
docs/: COLLECTED_DATA.md  DEVELOPMENT.md  SETUP.md  WORKFLOWS.md
download_analytics/: __main__.py  anaconda.py  bq.py  constants.py  drive.py  main.py  metrics.py  output.py  pypi.py  slack_utils.py  summarize.py  time_utils.py
pymetrics/: __init__.py  __main__.py  anaconda.py  drive.py  gh_downloads.py  github.py  main.py  metrics.py  output.py  pypi.py  slack_utils.py  summarize.py  time_utils.py
tests/: test_pypi.py
tests/unit/: test_metrics.py  test_time_utils.py
