[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "download-analytics"
version = "0.0.1.dev0"
description = "Scripts to extract metrics about OSS project downloads."
readme = "README.md"
authors = [
    { name = "DataCebo", email = "info@datacebo.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "tqdm",
    "openpyxl",
    "xlsxwriter",
    "requests",
    "python-benedict",
    "PyYAML",
    "PyDrive",
    "google-cloud-bigquery",
    "google-cloud-bigquery-storage",
    "db-dtypes",
    "httplib2==0.15.0",  # https://stackoverflow.com/questions/59815620/gcloud-upload-httplib2-redirectmissinglocation-redirected-but-the-response-is-m
    'pyarrow >= 15.0.0',
]

[project.urls]
Homepage = "https://github.com/DataCebo/download-analytics"

[project.scripts]
download-analytics = "download_analytics.__main__:main"

[tool.setuptools.packages.find]
include = ['download_analytics', 'download_analytics.*']

[project.optional-dependencies]
dev = [
    "ruff>=0.9.8",
    "invoke",
    "slack-sdk>=3.34,<4.0",
]

[tool.ruff]
preview = true
line-length = 100
indent-width = 4
src = ["download_analytics"]
exclude = [
    "docs",
    ".tox",
    ".git",
    "__pycache__",
    "*.ipynb",
    ".ipynb_checkpoints",
]

[tool.ruff.lint]
select = [
    "F", "E", "W", "D", "I001", "T201", "PD", "NPY201"
]
ignore = [
    "D107", "D417", "PD901", "PD101"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
preview = true
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["download_analytics"]
lines-between-types = 0

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403", "F405", "E501", "I001"]
"errors.py" = ["D105"]
"tests/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100
