[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymetrics"
version = "0.1.0"
description = "Scripts to extract metrics about python project downloads."
readme = "README.md"
authors = [
    { name = "DataCebo", email = "info@datacebo.com" }
]
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.13',
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas>=2.2.3",
    "tqdm",
    "openpyxl",
    "xlsxwriter",
    "requests",
    "python-benedict",
    "PyYAML",
    "PyDrive",
    "google-cloud-bigquery",
    "google-cloud-bigquery-storage",
    "db-dtypes",
    "httplib2==0.15.0",  # https://stackoverflow.com/questions/59815620/gcloud-upload-httplib2-redirectmissinglocation-redirected-but-the-response-is-m
    'pyarrow',
    's3fs',
    'boto3',
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/DataCebo/pymetrics"

[project.scripts]
pymetrics = "pymetrics.__main__:main"

[tool.setuptools.packages.find]
include = ['pymetrics', 'pymetrics.*']

[project.optional-dependencies]
dev = [
    "ruff>=0.9.8",
    "invoke",
    "slack-sdk>=3.34,<4.0",
]
test = [
    'pytest >= 8.1.1',
]

[tool.ruff]
preview = true
line-length = 100
indent-width = 4
src = ["pymetrics"]
target-version = "py313"
exclude = [
    "docs",
    ".tox",
    ".git",
    "__pycache__",
    "*.ipynb",
    ".ipynb_checkpoints",
]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # pydocstyle
    "D",
    # isort
    "I001",
    # print statements
    "T201",
    # pandas-vet
    "PD",
    # numpy 2.0
    "NPY201"

]
ignore = [
    # pydocstyle
    "D107",  # Missing docstring in __init__
    "D417",   # Missing argument descriptions in the docstring, this is a bug from pydocstyle: https://github.com/PyCQA/pydocstyle/issues/449
    "PD901",
    "PD101",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
preview = true
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["pymetrics"]
lines-between-types = 0

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403", "F405", "E501", "I001"]
"errors.py" = ["D105"]
"tests/**.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100
